// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoteContent should render 1`] = `
<RemoteContent__SandBox
  centered={false}
  dangerouslySetInnerHTML={
    Object {
      "__html": "<div> Test html </div>",
    }
  }
/>
`;

exports[`RemoteContent should render and have centered props 1`] = `
<RemoteContent__SandBox
  centered={true}
  dangerouslySetInnerHTML={
    Object {
      "__html": "<div> Test html </div>",
    }
  }
/>
`;
